--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    background-image:  url('./images/churrasco.jpg');
+}
+
 .container{
     font-family: Arial, Helvetica, sans-serif;
     max-width: 400px;
