--- a/style.css
+++ b/style.css
@@ -4,9 +4,15 @@ body{
 
 .container{
     font-family: Arial, Helvetica, sans-serif;
-    max-width: 400px;
-    margin: auto; /*centralizar*/
+    max-width: 800px;
+    margin: auto;
+    margin-top: 40px;  
+}
+
+.sessao{
     background-color:rgb(165, 86, 86);
+    margin: auto;
+    margin-top: 15px;
     padding: 20px;
     border-radius: 10px;
     border-style: solid;
@@ -22,19 +28,34 @@ h1{
     color: rgb(29, 24, 24);
 }
 
+.quantidades{
+    margin: 0;
+    padding: 0;
+}
+
 .miniContainer{
     text-align: center;
     font-weight: 600; 
     margin: 20px;
-   
+    display: inline-block;
+}
+
+.inputQtds{
+    font-size: 14px;
+    height: 20px;
+    width: 70px;
 }
 
 ul{
     text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
 li{
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 .labels{
@@ -42,20 +63,43 @@ li{
     margin: 5px;
 }
 
-.qtdPessoas{
-    display: block;
-    padding: 5px;
-    box-sizing: border-box;
-    margin: auto;
+h2{
+    font-size: 22px;
+    text-align: center;
+    margin: 0;
     margin-bottom: 20px;
-    margin-top: 5px;
-    
 }
 
-h2{
-    font-size: 20px;
-    text-align: center;
-    margin-top: 40px;
+h3{
+    font-size: 18px;
+}
+
+.opcoesCarnes{
+    display: inline-block;
+    margin-left: 30px;
+    text-align: left;
+}
+
+
+.labelCarnes{
+    font-size: 17px;
+    font-weight: 550;
+    margin-right: 40px;
+}
+
+#carnesVermelhas{
+    text-align: left;
+    margin: 0px;
+}
+
+#carnesBrancas{
+    text-align: left;
+    margin: 0px;
+}
+
+#aperitivos{
+    text-align: left;
+    margin: 0px;
 }
 
 .options{
@@ -63,9 +107,21 @@ h2{
 
 }
 
-#botao{
+.sessao{
+    text-align: center;
+    font-weight: 600;
+}
+
+#sessaoButtons{
+    margin: auto;
     margin-top: 15px;
-    margin-left: 20px;
+    padding: 20px;
+    text-align: center;
+}
+
+.botao{
+    margin-right: 25px;
+    padding: 5px 15px 5px 15px;
     font-weight: 600;
     border-radius: 3.5px;
     border-color: rgb(49, 48, 48);
